@@ -11,6 +11,7 @@ KERNEL_BINARY="arch/arm/boot/zImage"
 # command line.
 #
 DEFAULT_COMPRESS_INITRD=yes
+DEFAULT_COMPRESS_INITRD_TYPE=best
 
 DEFAULT_MAKEOPTS="-j2"
 
