@@ -21,7 +21,8 @@ CMD_INSTALL=0
 # Arch-specific defaults that can be overridden in the config file or on the
 # command line.
 #
-DEFAULT_COMPRESS_INITRD="yes"
+DEFAULT_COMPRESS_INITRD=yes
+DEFAULT_COMPRESS_INITRD_TYPE=best
 DEFAULT_KERNEL_MAKE=make
 DEFAULT_UTILS_MAKE=make
 DEFAULT_UTILS_CC=gcc
