@@ -10,6 +10,7 @@ KERNEL_BINARY="vmlinux"
 # command line.
 #
 DEFAULT_COMPRESS_INITRD=yes
+DEFAULT_COMPRESS_INITRD_TYPE=best
 
 DEFAULT_MAKEOPTS="-j2"
 
