@@ -13,6 +13,7 @@ USECOLOR="no"
 # command line.
 #
 DEFAULT_COMPRESS_INITRD=yes
+DEFAULT_COMPRESS_INITRD_TYPE=best
 
 DEFAULT_MAKEOPTS="-j2"
 
