@@ -5,6 +5,13 @@
 # Distributed under the GPL v2
 # $Id$
 
+  06 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> arch/alpha/config.sh,
+  arch/arm/config.sh, arch/ia64/config.sh, arch/mips/config.sh,
+  arch/parisc/config.sh, arch/parisc64/config.sh, arch/ppc/config.sh,
+  arch/ppc64/config.sh, arch/sparc/config.sh, arch/sparc64/config.sh,
+  arch/um/config.sh, arch/x86/config.sh, arch/x86_64/config.sh:
+  Ensure default for new initramfs compression is used.
+
   06 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> gen_initramfs.sh:
   Bugfixes in new code branches that I didn't test fully.
 
